[gd_scene load_steps=5 format=3 uid="uid://capture_point_scene"]

[ext_resource type="Script" path="res://scripts/capture_point.gd" id="1_capture_point"]

[sub_resource type="CylinderMesh" id="CylinderMesh_platform"]
top_radius = 3.0
bottom_radius = 3.0
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_neutral"]
albedo_color = Color(0.7, 0.7, 0.7, 1)
metallic = 0.3
roughness = 0.7

[sub_resource type="CylinderShape3D" id="CylinderShape3D_area"]
radius = 3.0
height = 5.0

[node name="CapturePoint" type="Area3D"]
script = ExtResource("1_capture_point")

[node name="Platform" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
mesh = SubResource("CylinderMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_neutral")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
shape = SubResource("CylinderShape3D_area")

[node name="CaptureProgressBar" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
visible = false

[node name="StatusLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
billboard = 1
text = "Neutral"
font_size = 24
outline_size = 8
outline_modulate = Color(0, 0, 0, 1)
